fixed distortion on images under followers/following

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -2280,12 +2280,15 @@ textarea
 .avatars
   padding: 10px
   padding-top: 0px
+  a
+    display: inline-block
+    width: 41px
+    overflow: hidden
   img
-    width: 41px !important
-    height: 61px !important
     margin-bottom: 2px
     margin-right: 3px
-
+    width: auto !important
+    max-height: 61px !important
 [data-widget = "events-filter"]
   height: auto
 
